<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="today_date">Today, July 08</string>
    <string name="temp_f">212º</string>
    <string name="temp_c">100º</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">89031</string>
    <string name="pref_temperature_key">temperature_key</string>
    <string name="pref_temperature_title">Temperature units</string>
    <string name="pref_temperature_default">F</string>
    <string name="pref_temperature_dialog_title">Choose temperature units</string>
    <string name="action_share">Share</string>

</resources>
